# auto_insurance_claim_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLANNING_PROMPT.md  README.md  docker-compose.yml  mkdocs.yml  plan-claimProcessAgent.prompt.md  pyproject.toml
.github/workflows/: docs.yml
conf/: config.yaml
conf/llm/: openai.yaml
conf/logging/: default.yaml
conf/pipeline/: langchain.yaml  smolagents.yaml
conf/server/: default.yaml
conf/vectordb/: chroma.yaml
data/: coverage_data.csv
data/sample_claims/: expired_policy.json  inflated_claim.json  invalid_policy.json  valid_claim.json
docs/: CNAME  index.md
docs/api/: rest-api.md  schemas.md
docs/architecture/: data-flow.md  overview.md  pipelines.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  docker.md  quickstart.md
docs/planning/: plan.md  planning-prompt.md
docs/stylesheets/: extra.css
frontend/: Dockerfile  api_client.py  app.py  styles.py
frontend/components/: __init__.py  claim_form.py  result_card.py  trace_viewer.py
src/claim_agent/: __init__.py  main.py
src/claim_agent/api/: __init__.py  app.py  middleware.py
src/claim_agent/api/routes/: __init__.py  claims.py
src/claim_agent/core/: __init__.py  ingestion.py  retrieval.py  validation.py
src/claim_agent/logging/: setup.py
src/claim_agent/pipelines/: __init__.py  base.py  factory.py
src/claim_agent/pipelines/langchain_pipeline/: __init__.py  chains.py  pipeline.py  prompts.py  tools.py
src/claim_agent/pipelines/smolagents_pipeline/: __init__.py  pipeline.py  prompts.py  tools.py
src/claim_agent/schemas/: __init__.py  claim.py  policy.py
tests/: __init__.py  conftest.py  test_api.py  test_langchain_pipeline.py  test_retrieval.py  test_schemas.py  test_smolagents_pipeline.py  test_validation.py
